[gd_scene load_steps=2 format=2]

[ext_resource path="res://tools/recipes/recipe_editor.gd" type="Script" id=1]

[node name="recipe_ui" type="PanelContainer"]
margin_left = 38.0
margin_top = 34.0
margin_right = 148.0
margin_bottom = 74.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 103.0
margin_bottom = 263.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 96.0
margin_bottom = 14.0
text = "Recipe Editor"

[node name="processor" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="VBoxContainer/processor"]
margin_top = 3.0
margin_right = 63.0
margin_bottom = 17.0
text = "Processor"

[node name="selected_processor" type="OptionButton" parent="VBoxContainer/processor"]
margin_left = 67.0
margin_right = 96.0
margin_bottom = 20.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 96.0
margin_bottom = 46.0

[node name="crafting_time" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 96.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="VBoxContainer/crafting_time"]
margin_right = 96.0
margin_bottom = 14.0
text = "Crafting Time"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/crafting_time"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 42.0

[node name="time" type="LineEdit" parent="VBoxContainer/crafting_time/HBoxContainer"]
margin_right = 58.0
margin_bottom = 24.0
text = "0"
align = 2

[node name="Label" type="Label" parent="VBoxContainer/crafting_time/HBoxContainer"]
margin_left = 62.0
margin_top = 5.0
margin_right = 84.0
margin_bottom = 19.0
size_flags_horizontal = 4
text = "sec"
align = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 96.0
margin_bottom = 100.0

[node name="inputs" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 96.0
margin_bottom = 154.0

[node name="Label" type="Label" parent="VBoxContainer/inputs"]
margin_right = 96.0
margin_bottom = 14.0
text = "Inputs"

[node name="button_add_input" type="Button" parent="VBoxContainer/inputs"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 38.0
text = "+"

[node name="input_list" type="VBoxContainer" parent="VBoxContainer/inputs"]
margin_top = 42.0
margin_right = 96.0
margin_bottom = 42.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/inputs"]
margin_top = 46.0
margin_right = 96.0
margin_bottom = 50.0

[node name="outputs" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 96.0
margin_bottom = 208.0

[node name="Label" type="Label" parent="VBoxContainer/outputs"]
margin_right = 96.0
margin_bottom = 14.0
text = "Outputs"

[node name="button_add_output" type="Button" parent="VBoxContainer/outputs"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 38.0
text = "+"

[node name="output_list" type="VBoxContainer" parent="VBoxContainer/outputs"]
margin_top = 42.0
margin_right = 96.0
margin_bottom = 42.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/outputs"]
margin_top = 46.0
margin_right = 96.0
margin_bottom = 50.0

[node name="save_recipe" type="Button" parent="VBoxContainer"]
margin_top = 212.0
margin_right = 96.0
margin_bottom = 232.0
text = "Save"

[node name="cancel" type="Button" parent="VBoxContainer"]
margin_top = 236.0
margin_right = 96.0
margin_bottom = 256.0
text = "Cancel"
